RESOLVED FIXED37718
Safari crashes with certain JavaScript charCode events in EventHandler::needsKeyboardEventDisambiguationQuirks
https://bugs.webkit.org/show_bug.cgi?id=37718
Summary Safari crashes with certain JavaScript charCode events in EventHandler::needs...
Alexey Proskuryakov
Reported 2010-04-16 11:46:53 PDT
Steps to Reproduce: 1. Open http://tlrobinson.net/Recorder/ (with the slash) 2. Click Record 3. In the "Source List" table, double click on an entry and change it ("21" to "Foo Bar" or something) 4. Click stop. 5. Click play. 6. When it tries to replay you entering the text, it crashes. <rdar://problem/7757812>
Attachments
proposed fix (3.95 KB, patch)
2010-04-16 12:18 PDT, Alexey Proskuryakov
mitz: review+
Alexey Proskuryakov
Comment 1 2010-04-16 12:18:59 PDT
Created attachment 53550 [details] proposed fix This only fixes the crash - the original test case still fails, as replayed keyboard events don't result in text input. I'm not sure if that's necessarily a bad thing.
Alexey Proskuryakov
Comment 2 2010-04-16 12:45:56 PDT
Note You need to log in before you can comment on or make changes to this bug.