        Reviewed by Dan Bernstein.

https://bugs.webkit.org/show_bug.cgi?id=37718
        Safari crashes with certain JavaScript charCode events in EventHandler::needsKeyboardEventDisambiguationQuirks

        Test: fast/events/recorded-keydown-event.html

        * dom/KeyboardEvent.cpp: (WebCore::KeyboardEvent::charCode): Check if the view (window) is
        frameless.



Canonical link: https://commits.webkit.org/49017@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57733 268f45cc-cd09-0410-ab3c-d52691b4dbfc